# azure-101-day

./: .gitignore  README.md  pyproject.toml
.github/workflows/: common_container_image_build.yml  common_container_image_build_push.yml  common_containerapps_deploy.yml  (+4 more)
app/backend/api/: Dockerfile  containers.py  controller.py  main.py  pyproject.toml  startup.py
app/backend/api/.github/: copilot-instructions.md
app/backend/api/di/: containers.py
app/backend/api/docs/: contoroller_test.md
app/backend/api/models/: __init__.py
app/backend/api/repositories/: __init__.py  file_repository.py
app/backend/api/services/: code_interpreter_service.py  file_upload_service.py
app/backend/api/src/: controller.py  main.py  startup.py
app/backend/api/src/di/: __init__.py  containers.py
app/backend/api/src/models/: prompt_request.py
app/backend/api/src/repositories/: dynamic_sessions_repository.py  message_repository.py
app/backend/api/src/services/: __init__.py  code_interpreter_service.py  dynamic_sessions_service.py  file_upload_service.py  sidecar_service.py
app/backend/api/src/tools/action/: __init__.py  code_interpreter_tool.py
app/backend/api/src/tracing/: tracing.py
app/backend/api/tests/: contoroller_test.md  test_controller.py
app/backend/api/tests/repositories/: test_dynamic_sessions_repository.py  test_message_repository.py
app/backend/api/tests/repository/: test_message_repository.py
app/backend/api/tests/services/: test_code_interpreter_service.py  test_file_upload_service.py
app/backend/api/tools/action/: code_interpreter_tool.py
app/backend/api/utils/: file_handler.py
tests/: test_app.py  test_hello_world.py
(+9 files in other folders)
