[tool.poetry]
name = "sample-app"
version = "0.1.0"
description = "A sample Python application for using storage mounts with container apps"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
